objects/CAPA_Plan__c.object
<CustomObject>
    <fields>
        <fullName>CAPA_ParentWorkFlowAction__c</fullName>
        <formula>CAPA__r.CMPL123_WF_Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA_ParentWorkFlowAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA</label>
        <referenceTo>CMPL123QMS__CAPA__c</referenceTo>
        <relationshipLabel>CAPA Plans</relationshipLabel>
        <relationshipName>CAPA_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CAPA_PlancCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Summary__c</fullName>
        <label>Plan Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CAPA Plan</label>
    <nameField>
        <label>CAPA Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAPA Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>Prevent_Edit_CAPA_plan</fullName>
        <active>true</active>
        <errorConditionFormula>CAPA__r.CMPL123_WF_Action__c =="Approve"</errorConditionFormula>
        <errorMessage>Record Locked</errorMessage>
    </validationRules>
</CustomObject>